--- a/views/heroslider.ejs
+++ b/views/heroslider.ejs
@@ -15,19 +15,7 @@
          
           <div class="banner-inner-wrapper">
             
-            <h1>Welcome to</h1>
-            <h2>FitBuddy</h2>
-        
-            <div class="line"></div>
-            <p>Hoe werkt het? hier komt een stukje text over waarom we dit page hebben . en heel
-              veel bullshit hahahaha ik moet gewoon veel text hebben so keep writing
-              hier komt een stukje text over waarom we dit page hebben .</p>
-            
-            <div class="learn-more-button">
-              <button class="first">First way</button>
-              <button class="sec">Second way</button>
-            </div>
-          </div>
+         
           
         </div><video id="background-video" autoplay loop muted poster="/stylesheets/videos/coach.mp4">
             <source src="/stylesheets/videos/coach1.mp4" type="video/mp4">
@@ -36,26 +24,15 @@
           
           <div class="banner-inner-wrapper">
  
-            <h1>GO Extra With </h1>
-            <h2>Online Home Workouts</h2>
-            <div class="line"></div>
-            <p>Begin nu om .Hoe werkt het? hier komt een stukje text over waarom we dit page hebben . en heel
-              veel bullshit hahahaha ik moet gewoon veel text hebben so keep writing
-              hier komt een stukje text over waarom we dit page hebben </p>
-            <div class="learn-more-button">
-              <button class="first">First way</button>
-            </div>
+      
           </div>
-        </div>
+        </div><video id="background-video" autoplay loop muted poster="/stylesheets/videos/coach1.mp4">
+          <source src="/stylesheets/videos/coach1.mp4" type="video/mp4">
+        </video> 
         <div id="top-banner-3" class="banner">
           <div class="banner-inner-wrapper"> 
-             <h1>Trending <br /> Workouts</h1>
-            <h2>Wil je toch extra sporten? </h2>
+
           
-            <div class="line"></div>
-            <div class="learn-more-button">
-              <button class="first">First way</button>
-            </div>
           </div>
         </div>
 
