--- a/public/stylesheets/overzicht.css
+++ b/public/stylesheets/overzicht.css
@@ -264,3 +264,101 @@
         grid-template-columns: repeat(3, 1fr);
     }
 }
+
+
+
+.weekDays-selector input {
+    display: none!important;
+  }
+  
+  .weekDays-selector input[type=checkbox] + label {
+    display: inline-block;
+    border-radius: 6px;
+    background: #dddddd;
+    height: 40px;
+    width: 30px;
+    margin-right: 3px;
+    line-height: 40px;
+    text-align: center;
+    cursor: pointer;
+  }
+  
+  .weekDays-selector input[type=checkbox]:checked + label {
+    background: #2AD705;
+    color: #ffffff;
+
+.slider-container {
+  width: 100%;
+  max-width: 300px;
+  margin: auto;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.range-slider {
+  position: relative;
+  width: 100%;
+  margin: 10px 0;
+}
+
+.slider {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 100%;
+  height: 8px;
+  background: transparent;
+  pointer-events: none;
+  z-index: 1; /* Ensure sliders are above range-fill */
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  background: #506EEC;
+  cursor: pointer;
+  border-radius: 50%;
+  pointer-events: auto;
+}
+
+.slider::-moz-range-thumb {
+  width: 20px;
+  height: 20px;
+  background: #506EEC;
+  cursor: pointer;
+  border-radius: 50%;
+  pointer-events: auto;
+}
+
+.range-fill {
+  position: absolute;
+  top: 50%;
+  height: 8px;
+  width: var(--fill-width, 0%);
+  background: #506EEC;
+  z-index: 0;
+  transform: translateY(-50%);
+  left: var(--fill-left, 0%);
+  transition: left 0.3s ease, width 0.3s ease;
+}
+
+.slider-values {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  font-size: 1.2rem;
+  color: #506EEC;
+}
+  }
+
+  .checkbox-group-legend {
+	font-size: 1.5rem;
+	font-weight: 700;
+	color: #9c9c9c;
+	text-align: center;
+	line-height: 1.125;
+	margin-bottom: 1.25rem;
+}
