--- a/views/trendingworkouts.ejs
+++ b/views/trendingworkouts.ejs
@@ -6,178 +6,36 @@
     <title>Trending Workouts</title>
 
     <link rel="stylesheet" href="/stylesheets/navbar.css" />
-    <link rel="stylesheet" href="/stylesheets/trendingworkouts.css" />
+    <link rel="stylesheet" href="/stylesheets/footer.css">
     <link rel="stylesheet" href="/stylesheets/styles.css">
+    <link rel="stylesheet" href="/stylesheets/animationbar.css" />
+    <link rel="stylesheet" href="stylesheets/heroslider.css" />
+    <link rel="stylesheet" href="stylesheets/newhomepage.css" />
   </head>
 
   <body>
-
+<header>
    <!-- include maakt het overzichtelijker om alles toe te voegen-->
     <%-include ('nav.ejs')%> 
-
+    <%- include('heroslider.ejs') %>
+    <%- include('animationbar.ejs') %>
+</header>
     <main>
-      <!--Main Body Content-->
-      <article class="container">
-        <video autoplay muted loop id="background-video">
-          <source src="/stylesheets/videos/Untitled-17.mp4" type="video/mp4" />
-          Your browser does not support the video tag.
-        </video>
-        <div class="fade-effect"></div>
-        <!-- dee  div is voor de  fade effect tussen de banner en wat onder komt-->
-        <h1 class="centered">TRENDING</h1>
-        <h2 class="bottom-left">WORKOUTS</h2>
-        <p>
-          hier komt een stukje text over waarom we dit page hebben . en heel
-          veel bullshit hahahaha ik moet gewoon veel text hebben so keep writing
-          hier komt een stukje text over waarom we dit page hebben .
-        </p>
-      </article>
+      <%- include('waaromons.ejs') %>
+      <%- include('newhomepage.ejs') %>
 
-      <h3>MEEST GEKEKEN DEZE WEEK</h3>
-      <div class="accordion">
-        <ul>
-          <li>
-            <div class="close">&times;</div>
-            <div class="background-image"></div>
-            <div class="label">Arms</div>
-            <div class="teaser">ARMS</div>
-            <div class="full-content">
-              <a href="#">
-                <div class="wrapper">
-                  <div class="row">
-                    <div class="col-sm-4">
-                      <h2>Full Arm workout</h2>
-                      An beginner workout to boost the energy bla bla bla An
-                      begiiner workout to boost the energy bla bla bl An
-                      begiiner workout to boost the energy bla bla bla
-                    </div>
-                    <div class="col-sm-8 text-center">
-                      <img
-                        class="img-responsive"
-                        src="http://via.placeholder.com/300x300/fff"
-                        alt="http://via.placeholder.com/300x300/fff"
-                      />
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </li>
 
-          <li>
-            <div class="close">&times;</div>
-            <div class="background-image"></div>
-            <div class="label">Abs</div>
-            <div class="teaser">Abs</div>
-            <div class="full-content">
-              <a href="#">
-                <div class="wrapper">
-                  <div class="row">
-                    <div class="col-sm-4">
-                      <h2>Your Staff and Trainers</h2>
-                      An beginner workout to boost the energy bla bla bla An
-                      begiiner workout to boost the energy bla bla bl An
-                      begiiner workout to boost the energy bla bla bla
-                    </div>
-                    <div class="col-sm-8 text-center">
-                      <img
-                        class="img-responsive"
-                        src="http://via.placeholder.com/300x300/fff"
-                        alt="http://via.placeholder.com/300x300/fff"
-                      />
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </li>
-          <li>
-            <div class="close">&times;</div>
-            <div class="background-image"></div>
-            <div class="label">Legs</div>
-            <div class="teaser">Legs</div>
-            <div class="full-content">
-              <a href="#">
-                <div class="wrapper">
-                  <div class="row">
-                    <div class="col-sm-4">
-                      <h4>ABS</h4>
-                      An beginner workout to boost the energy bla bla bla An
-                      begiiner workout to boost the energy bla bla bl An
-                      begiiner workout to boost the energy bla bla bla
-                    </div>
-                    <div class="col-sm-8 text-center">
-                      <img
-                        class="img-responsive"
-                        src="http://via.placeholder.com/300x300/fff"
-                        alt="http://via.placeholder.com/300x300/fff"
-                      />
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </li>
+     </main>
+    <footer>
 
-          <li>
-            <div class="close">&times;</div>
-            <div class="background-image"></div>
-            <div class="label">Shoulder</div>
-            <div class="teaser">Shoulder</div>
-            <div class="full-content">
-              <a href="#">
-                <div class="wrapper">
-                  <div class="row">
-                    <div class="col-sm-4">
-                      <h2>Shoulder</h2>
-                      An beginner workout to boost the energy bla bla bla An
-                      begiiner workout to boost the energy bla bla bl An
-                      begiiner workout to boost the energy bla bla bla
-                    </div>
-                    <div class="col-sm-8 text-center">
-                      <img
-                        class="img-responsive"
-                        src="http://via.placeholder.com/300x300/fff"
-                        alt="http://via.placeholder.com/300x300/fff"
-                      />
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </li>
-          <li>
-            <div class="close">&times;</div>
-            <div class="background-image"></div>
-            <div class="label">legs</div>
-            <div class="teaser">Legs</div>
-            <div class="full-content">
-              <a href="#">
-                <div class="wrapper">
-                  <div class="row">
-                    <div class="col-sm-4">
-                      <h2>Shoulder</h2>
-                      An beginner workout to boost the energy bla bla bla An
-                      begiiner workout to boost the energy bla bla bl An
-                      begiiner workout to boost the energy bla bla bla
-                    </div>
-                    <div class="col-sm-8 text-center">
-                      <img
-                        class="img-responsive"
-                        src="http://via.placeholder.com/300x300/fff"
-                        alt="http://via.placeholder.com/300x300/fff"
-                      />
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </main>
-    <footer></footer>
+      <%- include('footerraha.ejs') %>
+    </footer>
   </body>
   
   <script src="/stylesheets/scripts/trendingworkouts.js"></script>
+
+  <script src="/stylesheets/scripts/heroslider.js"></script>
+
+  <script src="/stylesheets/scripts/animationbar.js"></script>
+
 </html>
