--- a/views/ourstory.ejs
+++ b/views/ourstory.ejs
@@ -12,7 +12,7 @@
                <p>De gebruiksvriendelijke app begeleidt je stap voor stap, met video-instructies en gepersonaliseerde schema's. Begin vandaag nog en ervaar hoe FitBuddy je helpt fit, sterk en gezond te worden, waar en wanneer je maar wilt!</p>
             
                <div class="learn-more-button">
-                <button class="sec">First way</button>
+                <button class="sec"><a href="/overzicht">Find a buddy!</a> </button>
               </div>
           </div>
         
