--- a/views/workoutslider.ejs
+++ b/views/workoutslider.ejs
@@ -22,7 +22,7 @@
       <div class="label">Arms</div>
       <div class="teaser">ARMS</div>
       <div class="full-content">
-        <a href="#">
+        <a href="/error">
           <div class="wrapper">
             <div class="row">
               <div class="col-sm-4">
@@ -47,7 +47,7 @@
       <div class="label">Abs</div>
       <div class="teaser">Abs</div>
       <div class="full-content">
-        <a href="#">
+        <a href="/error">
           <div class="wrapper">
             <div class="row">
               <div class="col-sm-4">
@@ -71,7 +71,7 @@
       <div class="label">Back</div>
       <div class="teaser">Back</div>
       <div class="full-content">
-        <a href="#">
+        <a href="/error">
           <div class="wrapper">
             <div class="row">
               <div class="col-sm-4">
@@ -96,7 +96,7 @@
       <div class="label">Shoulder</div>
       <div class="teaser">Shoulder</div>
       <div class="full-content">
-        <a href="#">
+        <a href="/error">
           <div class="wrapper">
             <div class="row">
               <div class="col-sm-4">
@@ -122,7 +122,7 @@
       <div class="label">legs</div>
       <div class="teaser">Legs</div>
       <div class="full-content">
-        <a href="#">
+        <a href="/error">
           <div class="wrapper">
             <div class="row">
               <div class="col-sm-4"></div>
