--- a/views/banner.ejs
+++ b/views/banner.ejs
@@ -11,8 +11,8 @@
         <p class="des">Train je armen op een leuke manier!</p>
 
         <div class="btn">
-          <button>Meer Informatie</button>
-          <button>Train Arms</button>
+          <button><a href="/error"> Meer Informatie</a></button>
+          <button><a href="#">Train arms</a></button>
         </div>
 
       </div>
@@ -44,7 +44,7 @@
 
         <div class="btn">
           <button><a href="/error"> Meer Informatie</a></button>
-          <button>Zoek Buddy</button>
+          <button><a href="/overzicht">Zoek buddy</a></button>
         </div>
 
       </div>
@@ -61,7 +61,7 @@
 
         <div class="btn">
           <button><a href="/error"> Meer Informatie</a></button>
-          <button>Zoek Buddy</button>
+          <button><a href="/overzicht">Zoek buddy</a></button>
         </div>
 
       </div>
@@ -79,7 +79,7 @@
 
         <div class="btn">
           <button><a href="/error"> Meer Informatie</a></button>
-          <button>Maak Een Plan</button>
+          <button><a href="/overzicht">Zoek buddy</a></button>
         </div>
 
       </div>
@@ -98,7 +98,7 @@
 
         <div class="btn">
           <button><a href="/error"> Meer Informatie</a></button>
-          <button>Maak Een Plan</button>
+          <button><a href="/overzicht">Zoek buddy</a></button>
         </div>
 
       </div>
@@ -117,7 +117,7 @@
 
         <div class="btn">
           <button><a href="/error"> Meer Informatie</a></button>
-          <button>Zoek Buddy</button>
+          <button><a href="/overzicht">Zoek buddy</a></button>
         </div>
 
       </div>
