--- a/views/heroslider.ejs
+++ b/views/heroslider.ejs
@@ -15,7 +15,12 @@
          
           <div class="banner-inner-wrapper">
             
-         
+            <h1>Hier vind je de best</h1>
+            <h2>Home<br> Workouts</h2>
+ 
+            <div class="line"></div>
+     
+          </div>
           
         </div><video id="background-video" autoplay loop muted poster="/stylesheets/videos/coach.mp4">
             <source src="/stylesheets/videos/coach1.mp4" type="video/mp4">
@@ -24,28 +29,24 @@
           
           <div class="banner-inner-wrapper">
  
-      
+            <div class="line"></div>
+         
           </div>
-        </div><video id="background-video" autoplay loop muted poster="/stylesheets/videos/coach1.mp4">
-          <source src="/stylesheets/videos/coach1.mp4" type="video/mp4">
-        </video> 
+        </div>
         <div id="top-banner-3" class="banner">
           <div class="banner-inner-wrapper"> 
-
-          
+     
+            <div class="line"></div>
+        
           </div>
         </div>
 
 
         <div id="top-banner-4" class="banner">
           <div class="banner-inner-wrapper"> 
-             <h1>Trending <br /> Workouts</h1>
-            <h2>Wil je toch extra sporten? </h2>
-          
+        
             <div class="line"></div>
-            <div class="learn-more-button">
-              <button class="first">First way</button>
-            </div>
+          
           </div>
         </div>
        
@@ -57,10 +58,10 @@
     </div>
 <article id="idk">
 <div class="controls">
-  <label for="banner1"><span class="progressbar"></span>Intro</label>
-  <label for="banner2"><span class="progressbar"></span>Work</label>
-  <label for="banner3"><span class="progressbar"></span>About</label>
-  <label for="banner4"><span class="progressbar"></span>LOCATION<Contacts</label>
+  <label for="banner1"><span class="progressbar"></span>START</label>
+  <label for="banner2"><span class="progressbar"></span>SPORTING</label>
+  <label for="banner3"><span class="progressbar"></span>TODAY</label>
+  <label for="banner4"><span class="progressbar"></span>!<Contacts</label>
 </div>
 </article>
 
