--- a/views/animationbar.ejs
+++ b/views/animationbar.ejs
@@ -19,4 +19,13 @@
   </div>
 </div>
 
+<script >const root = document.documentElement;
+  const marqueeElementsDisplayed = getComputedStyle(root).getPropertyValue("--marquee-elements-displayed");
+  const marqueeContent = document.querySelector(" ul.marquee-content");
+  
+  root.style.setProperty("--marquee-elements", marqueeContent.children.length);
+  
+  for (let i = 0; i < marqueeElementsDisplayed; i++) {
+      marqueeContent.appendChild(marqueeContent.children[i].cloneNode(true));
+  }</script>
 <script src="/stylesheets/scripts/workoutslider.js"></script>
