--- a/views/waaromons.ejs
+++ b/views/waaromons.ejs
@@ -1,31 +1,92 @@
-<link rel="stylesheet" href="/stylesheets/styles.css">
-<link rel="stylesheet" href="/stylesheets/waaromons.css">
+<link rel="stylesheet" href="/stylesheets/styles.css" />
+<link rel="stylesheet" href="/stylesheets/waaromons.css" />
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link
+  href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+  rel="stylesheet"
+/>
 
 <div class="containerCard">
+  <h3>Meest Gekeken Deze Week</h3>
+  <div class="cards">
+    <div class="card">
 
-    <h3>Waarom FitBuddy?</h3>
-    <div class="cards">
-        <div class="card">
-            <img src="#" alt="">
-            <h4>Ondersteuning en motivatie</h4>
-            <p>FitBuddy biedt op maat gemaakte trainings- en voedingsprogramma's die zijn afgestemd op jouw specifieke doelen en behoeften, waardoor je effectiever en sneller resultaten behaalt.</p>
-        </div>
-
-        <div class="card">
-            <img src="#" alt="">
-            <h4>Persoonlijke Begeleiding</h4>
-            <p>FitBuddy biedt een gemeenschap van gelijkgestemde mensen en professionele trainers die je aanmoedigen en ondersteunen, waardoor je gemotiveerd blijft en je vastberadenheid versterkt om je gezondheids- en fitnessdoelen te bereiken.</p>
-        </div>
-
-        <div class="card">
-            <img src="#" alt="">
-            <h4>Flexibiliteit</h4>
-            <p> FitBuddy biedt flexibiliteit in je trainingsschema, zodat je kunt trainen wanneer het jou uitkomt, of je nu thuis, in de sportschool of onderweg bent.</p>
-        </div>
+  
+         <iframe
+        width="100%"
+        height=100%;
+       src="https://www.youtube.com/embed/M0uO8X3_tEA?si=OeM7SljBEs3myGg5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 
+    <div class="card">
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/XxuRSjER3Qk?si=wFcnOvcyBfYLdznB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
+
+    <div class="card">
+
+      <iframe width="100%" height="100%"   src="https://www.youtube.com/embed/mf1xQS_Zlkc?si=qzypCnctXni9Yfjr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
+
+
+
+    <div class="card">
+
+  
+        <iframe
+       width="100%"
+       height=100%;
+      src="https://www.youtube.com/embed/M0uO8X3_tEA?si=OeM7SljBEs3myGg5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+   </div>
+
+
+ 
+
+  </div>
+
+  
 </div>
+
+
+<div class="containerCard">
+    <h3>Arms</h3>
+    <div class="cards">
+
+      <div class="card">
+  
+    
+           <iframe
+          width="100%"
+          height=100%;
+         src="https://www.youtube.com/embed/M0uO8X3_tEA?si=OeM7SljBEs3myGg5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
+  
+      <div class="card">
+          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/XxuRSjER3Qk?si=wFcnOvcyBfYLdznB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
+ 
+      <div class="card">
+  
+        <iframe width="100%" height="100%"   src="https://www.youtube.com/embed/mf1xQS_Zlkc?si=qzypCnctXni9Yfjr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
+  
+  
+  
+      <div class="card">
+  
+    
+          <iframe
+         width="100%"
+         height=100%;
+        src="https://www.youtube.com/embed/M0uO8X3_tEA?si=OeM7SljBEs3myGg5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+     </div>
+  
+  
+   
+  
+    </div>
+  
+    
+  </div>
+  
