--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,9 @@
 </head>
 <body>
     <header>
+
     <%- include('nav.ejs') %>
+
 
 </header>
 <main>
@@ -25,7 +27,7 @@
     <!-- <%- include('waaromons.ejs') %> -->
     <%- include('workoutslider.ejs') %>
 
-
+    <%- include('profielbutton.ejs') %>
     <%- include('kaart.ejs') %>
  <footer>
     <%- include('footerraha.ejs') %>
