--- a/views/trendingworkouts.ejs
+++ b/views/trendingworkouts.ejs
@@ -32,6 +32,7 @@
   
 
       <%- include('footerraha.ejs') %>
+      <%- include('profielbutton.ejs') %>
     
   </body>
   <script src="/stylesheets/scripts/animationbar.js"></script>
