--- a/views/overzicht.ejs
+++ b/views/overzicht.ejs
@@ -19,6 +19,7 @@
 
 
     <%- include('nav.ejs') %>
+    <%- include('profielbutton.ejs') %>
     
         <main>
             <div id="mainSection">
