--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -1,32 +1,31 @@
 <link rel="stylesheet" href="/stylesheets/navbar.css" />
 
 <header>
-    <!--HamBurger Icon-->
-    <div class="bars" id="nav-action">
-        <span class="bar"> </span>
-    </div>
+  <!--HamBurger Icon-->
+  <div class="bars" id="nav-action">
+    <span class="bar"> </span>
+  </div>
 
-    <!--Navbar Links-->
-    <nav id="nav">
-        <ul class="navlist">
-            <li class="shape-circle circle-one">
-                <a href="/overzicht">Plan Maken</a>
-            </li>
+  <!--Navbar Links-->
+  <nav id="nav">
+    <ul class="navlist">
+      <li class="shape-circle circle-one">
+        <a href="/overzicht">Overzicht</a>
+      </li>
 
-            <li class="shape-circle circle-two">
-                <a href="/error">Trending Workouts</a>
-            </li>
+      <li class="shape-circle circle-two">
+        <a href="/trendingworkouts.ejs">Trending Workouts</a>
+      </li>
 
-            <li class="shape-circle circle-three">
-                <a href="/error">Over Ons</a>
-            </li>
+      <li class="shape-circle circle-three">
+        <a href="/login">Login</a>
+      </li>
 
-            <li class="shape-circle circle-five">
-                <a href="/">Home</a>
-            </li>
-        </ul>
-    </nav>
+      <li class="shape-circle circle-five">
+        <a href="/">Home</a>
+      </li>
+    </ul>
+  </nav>
 </header>
-
 
 <script src="/stylesheets/scripts/index.js"></script>
