--- a/views/overzicht.ejs
+++ b/views/overzicht.ejs
@@ -52,6 +52,7 @@
                     </div>
                     <div class="slider-values">
                       <span id="slider-min-value">18</span> - <span id="slider-max-value">50+</span>
+                     </style>
                     </div>
                   </div>
                 </fieldset>
