--- a/views/banner.ejs
+++ b/views/banner.ejs
@@ -12,7 +12,7 @@
 
         <div class="btn">
           <button><a href="/error"> Meer Informatie</a></button>
-          <button><a href="#">Train arms</a></button>
+          <button><a href="/trendingworkouts">Train arms</a></button>
         </div>
 
       </div>
@@ -44,7 +44,7 @@
 
         <div class="btn">
           <button><a href="/error"> Meer Informatie</a></button>
-          <button><a href="/overzicht">Zoek buddy</a></button>
+          <button><a href="/trendingworkouts">Zoek buddy</a></button>
         </div>
 
       </div>
@@ -79,7 +79,7 @@
 
         <div class="btn">
           <button><a href="/error"> Meer Informatie</a></button>
-          <button><a href="/overzicht">Zoek buddy</a></button>
+          <button><a href="/trendingworkouts">Zoek buddy</a></button>
         </div>
 
       </div>
@@ -98,7 +98,7 @@
 
         <div class="btn">
           <button><a href="/error"> Meer Informatie</a></button>
-          <button><a href="/overzicht">Zoek buddy</a></button>
+          <button><a href="/trendingworkouts">Zoek buddy</a></button>
         </div>
 
       </div>
