--- a/views/workoutslider.ejs
+++ b/views/workoutslider.ejs
@@ -32,8 +32,8 @@
                 </p>
               </div>
               <div class="col-sm-8 text-center">
-                <img class="img-responsive" src="http://via.placeholder.com/300x300/fff"
-                  alt="http://via.placeholder.com/300x300/fff" />
+                <!-- <img class="img-responsive" src="http://via.placeholder.com/300x300/fff"
+                  alt="http://via.placeholder.com/300x300/fff" /> -->
               </div>
             </div>
           </div>
@@ -57,8 +57,8 @@
                 </p>
               </div>
               <div class="col-sm-8 text-center">
-                <img class="img-responsive" src="http://via.placeholder.com/300x300/fff"
-                  alt="http://via.placeholder.com/300x300/fff" />
+                <!-- <img class="img-responsive" src="http://via.placeholder.com/300x300/fff"
+                  alt="http://via.placeholder.com/300x300/fff" /> -->
               </div>
             </div>
           </div>
@@ -81,8 +81,8 @@
                 </p>
               </div>
               <div class="col-sm-8 text-center">
-                <img class="img-responsive" src="http://via.placeholder.com/300x300/fff"
-                  alt="http://via.placeholder.com/300x300/fff" />
+                <!-- <img class="img-responsive" src="http://via.placeholder.com/300x300/fff"
+                  alt="http://via.placeholder.com/300x300/fff" /> -->
               </div>
             </div>
           </div>
@@ -108,8 +108,8 @@
                 </p>
               </div>
               <div class="col-sm-8 text-center">
-                <img class="img-responsive" src="http://via.placeholder.com/300x300/fff"
-                  alt="http://via.placeholder.com/300x300/fff" />
+                <!-- <img class="img-responsive" src="http://via.placeholder.com/300x300/fff"
+                  alt="http://via.placeholder.com/300x300/fff" /> -->
               </div>
             </div>
           </div>
@@ -132,8 +132,8 @@
               </p>
 
               <div class="col-sm-8 text-center">
-                <img class="img-responsive" src="http://via.placeholder.com/300x300/fff"
-                  alt="http://via.placeholder.com/300x300/fff" />
+                <!-- <img class="img-responsive" src="http://via.placeholder.com/300x300/fff"
+                  alt="http://via.placeholder.com/300x300/fff" /> -->
               </div>
             </div>
           </div>
