--- a/views/banner.ejs
+++ b/views/banner.ejs
@@ -43,8 +43,8 @@
         <p class="des">Lift zware gewichten met jouw buddy en wordt sterker!</p>
 
         <div class="btn">
-          <button><a href="/error"> Meer Informatie</a></button>
-          <button><a href="/trendingworkouts">Zoek buddy</a></button>
+          <button><a href="/trendingworkouts"> Meer Informatie</a></button>
+          <button><a href="/overzicht">Zoek buddy</a></button>
         </div>
 
       </div>
@@ -78,8 +78,8 @@
         </p>
 
         <div class="btn">
-          <button><a href="/error"> Meer Informatie</a></button>
-          <button><a href="/trendingworkouts">Zoek buddy</a></button>
+          <button><a href="/trendingworkouts"> Meer Informatie</a></button>
+          <button><a href="/overzicht">Zoek buddy</a></button>
         </div>
 
       </div>
@@ -97,8 +97,8 @@
         </p>
 
         <div class="btn">
-          <button><a href="/error"> Meer Informatie</a></button>
-          <button><a href="/trendingworkouts">Zoek buddy</a></button>
+          <button><a href="/trendingworkouts"> Meer Informatie</a></button>
+          <button><a href="/overzicht">Zoek buddy</a></button>
         </div>
 
       </div>
