--- a/views/newhomepage.ejs
+++ b/views/newhomepage.ejs
@@ -9,7 +9,7 @@
         </p>
         
         <div class="learn-more-button">
-            <button class="sec">Plan maken</button>
+            <a href="/overzicht"><button class="sec">Zoek een fitbuddy</button></a>
           </div>
       </div>
       <img src="stylesheets/images/goforit.png" class="animated fadeInRight"></img>
