--- a/views/profiel.ejs
+++ b/views/profiel.ejs
@@ -38,7 +38,7 @@
             <input type="hidden" name="existingProfileImage" value="<%= user.profileImage %>">
         </div>
         <button type="submit">Opslaan</button>
-        <a class="logout" href="/logout">Sign out</a>
+        <a class="logout" href="/logout">Uitloggen</a>
     </form>
     </div>
 </body>
